--- a/pasta-css/leitura.css
+++ b/pasta-css/leitura.css
@@ -884,9 +884,9 @@
  tiver uma classe de gênero específica.
 */
 
- .modo-noturno.genre-manga canvas,
+ .modo-noturno.genre-mangá canvas,
  .modo-noturno.genre-história-em-quadrinhos canvas,
- .modo-sepia.genre-manga canvas,
+ .modo-sepia.genre-mangá canvas,
  .modo-sepia.genre-história-em-quadrinhos canvas {
      /* * Remove qualquer filtro aplicado pela regra .modo-noturno,
      * fazendo a página do livro voltar ao normal.
