ajustes no login

--- a/pasta-css/cadastro.css
+++ b/pasta-css/cadastro.css
@@ -40,6 +40,8 @@ img {
     display: flex;
     width: 100%;
     max-width: 900px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .left-login {
@@ -84,7 +86,6 @@ img {
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
 
 .card-login h1 {
