--- a/pasta-css/login-cadastro.css
+++ b/pasta-css/login-cadastro.css
@@ -63,6 +63,7 @@ body {
     color: #f5f5f5;
     padding: 20px;
     overflow-x: hidden;
+    padding: 57px 20px 20px 20px;
 }
 
 /* Modos de Leitura (simplificado, ajuste se precisar) */
@@ -79,7 +80,7 @@ body.modo-claro {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 47px;
+
 }
 
 .login-container {
